[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "shapfire"
version = "0.1.0"
description = "."
license = "MIT"
authors = ["NicklasXYZ"]
readme = "README.md"
repository = "https://github.com/NicklasXYZ/shapfire"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
# See https://python-poetry.org/docs/dependency-specification/
python = ">=3.8,<3.11"
scikit-learn = "^1.0"
pandas = "^1.3.3"
numpy = "1.21"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
lightgbm = "^3.3.2"
shap = "^0.40.0"
tqdm = "^4.64.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
pytest = "^6"
pytest-cov = "^2.7"
pytest-mock = "^3.1.0"
jupyter = "^1.0.0"
nbsphinx = "^0.8.8"
sphinx-immaterial = "^0.7.3"

# used in docs to parse pyproject.toml
tomlkit = "^0.6"
sphinx-autodoc-typehints = "^1.17.0"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 80

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"

# Extra options:
addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--cov=ShapFire",
  "--cov-report=term:skip-covered",
  "--cov-report=html",
  "--cov-branch",
  "--cov-append",
  ]
